<?xml version="1.0" encoding="utf-8"?>
<com.youngengineers.components.EmptyLoadingViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/loadingRootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


      <!--  <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingAnimView"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="false"
            app:lottie_fileName="loading_animation.json"
            app:lottie_loop="true" />-->


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_empty"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_gravity="center"
            android:src="@drawable/empty_view" />

        <TextView
            android:id="@+id/tv_empty"
            style="@style/BoldXL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/marginM"
            android:text="@string/title_msg_emptyView"
            android:textColor="@color/colorRed" />

        <TextView
            android:id="@+id/tv_empty_refresh"
            style="@style/RegularN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/marginM"
            android:text="@string/title_msg_try_again"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/tv_empty_pull_btn"
            style="@style/RegularXL"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/marginL"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/btn_txt_emptyView"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeN" />

    </LinearLayout>
</com.youngengineers.components.EmptyLoadingViewPod>
