<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.AccountFragment">

    <ImageView
        android:id="@+id/backgroundProfileIv"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:foreground="@color/colorPrimary40"
        android:scaleType="center"
        android:src="@drawable/dummy_user_photo" />

    <ImageView
        android:id="@+id/overlayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/backgroundProfileIv"
        android:scaleX="1.3"
        android:scaleY="1.1"
        android:src="@drawable/profile_overlay" />

    <ImageView
        android:id="@+id/profileIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@id/overlayLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:src="@drawable/dummy_user_photo" />

    <TextView
        android:id="@+id/channelSettingBtn"
        style="@style/RegularN"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/profileIv"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:foreground="?selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/marginXL"
        android:paddingEnd="@dimen/marginL"
        android:text="@string/btn_txt_channel_setting"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/accountSettingBtn"
        style="@style/RegularN"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/channelSettingBtn"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:foreground="?selectableItemBackground"
        android:gravity="center_vertical"
        android:alpha="0.5"
        android:paddingStart="@dimen/marginXL"
        android:paddingEnd="@dimen/marginL"
        android:text="@string/btn_txt_account_setting"
        android:textColor="@color/colorPrimary" />

    <RelativeLayout
        android:id="@+id/notificationSettingBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountSettingBtn"
        android:paddingTop="@dimen/marginS"
        android:paddingBottom="@dimen/marginS">

        <TextView
            android:id="@+id/notiSettingTitle"
            style="@style/RegularN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:paddingStart="@dimen/marginXL"
            android:paddingEnd="@dimen/marginL"

            android:text="@string/btn_txt_account_setting"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/notiSettingWarning"
            style="@style/SemiBoldXXS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notiSettingTitle"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/marginXL"
            android:paddingEnd="@dimen/marginL"

            android:text="Data Charges May Ouucr"
            android:textColor="@color/colorPrimary40" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/marginL"
            />

    </RelativeLayout>


    <TextView
        android:id="@+id/logOutBtn"
        style="@style/SemiBoldN"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/marginXXL"
        android:background="@drawable/button_bg_20"
        android:gravity="center"
        android:paddingStart="@dimen/marginXL"
        android:paddingEnd="@dimen/marginXL"
        android:text="@string/btn_txt_log_out"
        android:textColor="@color/white"

        />


</RelativeLayout>